Added configuration for absolute paths to TSDX

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
     "moduleResolution": "node",
     "baseUrl": "./",
     "paths": {
-      "*": ["src/*", "node_modules/*"]
+      "@/*": ["src/*"],
+      "*": ["node_modules/*"]
     },
     "jsx": "react",
     "esModuleInterop": true
