--- a/package.json
+++ b/package.json
@@ -43,5 +43,8 @@
     "tsdx": "^0.13.2",
     "tslib": "^2.0.0",
     "typescript": "^3.9.3"
+  },
+  "dependencies": {
+    "@rollup/plugin-alias": "^3.1.0"
   }
 }
